fixed a bug with too much width

--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,8 @@ button{
 }
 
 .panel-body{
-    padding: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .btn-material-add {
